added workflows to deploy and publish openidl app

--- a/openidl-k8s/global-values-dev-analytics.yaml
+++ b/openidl-k8s/global-values-dev-analytics.yaml
@@ -1,7 +1,7 @@
 global:
   clusterurl: aaisanalyticsdemo.com
   appsecret: apps-secret
-  configpath: config-analytics
+  configpath: config-local-analytics
   datacallapp:
     install: true
     port: 8080
@@ -10,6 +10,10 @@ global:
     ingressenabled: false
     ingresshostname: data-call-app-service.analytics.dev.internal.aaisanalyticsdemo.com
     publicingresshostname: data-call-app-service.analytics.dev.aaisanalyticsdemo.com
+    image:
+      repository: ghcr.io/openidl-org/openidl-data-call-app
+      pullPolicy: IfNotPresent
+      tag: 1-git-actions-helm-3b27ace-091420211922
   utilities:
     install: true
     port: 8080
@@ -18,6 +22,10 @@ global:
     ingressenabled: false
     ingresshostname: utilities-service.analytics.dev.internal.aaisanalyticsdemo.com
     publicingresshostname: utilities-service.analytics.dev.aaisanalyticsdemo.com
+    image:
+      repository: ghcr.io/openidl-org/openidl-utilities
+      pullPolicy: IfNotPresent
+      tag: 6-git-actions-helm-8f37194-091420211946
   ui:
     install: true
     servicename: ui-service
@@ -25,21 +33,37 @@ global:
     targetport: 8080
     ingressenabled: false
     ingresshostname: openidl.analytics.dev.aaisanalyticsdemo.com
+    image:
+      repository: ghcr.io/openidl-org/openidl-ui
+      pullPolicy: IfNotPresent
+      tag: 1-git-actions-helm-3b27ace-091420211922
   datacallmoodlistener:
     install: true
     port: 8080
     targetport: 8080
     servicename: data-call-mood-listener-service
+    image:
+      repository: ghcr.io/openidl-org/openidl-data-call-mood-listener
+      pullPolicy: IfNotPresent
+      tag: 1-git-actions-helm-3b27ace-091420211922
   transactionaldataeventlistener:
     install: true
     port: 8080
     targetport: 8080
     servicename: transactional-data-event-listener-service
+    image:
+      repository: ghcr.io/openidl-org/openidl-transactional-data-event-listener
+      pullPolicy: IfNotPresent
+      tag: 1-git-actions-helm-3b27ace-091420211922
   datacallprocessor:
     install: false
     port: 8080
     targetport: 8080
     servicename: data-call-processor-service
+    image:
+      repository: ghcr.io/openidl-org/openidl-data-call-processor
+      pullPolicy: IfNotPresent
+      tag: 1-git-actions-helm-3b27ace-091420211922
   insurancedatamanager:
     install: false
     port: 8080
@@ -47,11 +71,19 @@ global:
     servicename: insurance-data-manager-service
     ingressenabled: false
     ingresshostname: insurance-data-manager-service.analytics.dev.aaisanalyticsdemo.com
+    image:
+      repository: ghcr.io/openidl-org/openidl-insurance-data-manager
+      pullPolicy: IfNotPresent
+      tag: 1-git-actions-helm-3b27ace-091420211922
   upload:
     install: false
     port: 80
     targetport: 80
     servicename: upload-service
+    image:
+      repository: ghcr.io/openidl-org/openidl-upload
+      pullPolicy: IfNotPresent
+      tag: latest
   carrierui:
     install: false
     servicename: carrier-ui-service
@@ -59,3 +91,9 @@ global:
     targetport: 8080
     ingressenabled: false
     ingresshostname: openidl.analytics.dev.aaisanalyticsdemo.com
+    image:
+      repository: ghcr.io/openidl-org/openidl-carrier-ui
+      pullPolicy: IfNotPresent
+      tag: 1-git-actions-helm-3b27ace-091420211922
+  secrets:
+    install: true
