--- a/openidl-k8s/charts/openidl-utilities/templates/deployment.yml
+++ b/openidl-k8s/charts/openidl-utilities/templates/deployment.yml
@@ -49,8 +49,8 @@ spec:
         # for regular deployment
         # image: aais:1
         # for local development against minikube registry
-        image: {{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}
-        imagePullPolicy: {{ .Values.image.pullPolicy }}      
+        image: {{ .Values.global.utilities.image.repository | default .Values.image.repository }}:{{ .Values.global.utilities.image.tag | default .Values.image.tag }}
+        imagePullPolicy: {{ .Values.global.utilities.image.pullPolicy | default .Values.image.pullPolicy }}      
         ports:
         - containerPort: {{ .Values.global.utilities.port }}
         volumeMounts:
