--- a/.github/workflows/publish-openidl-insurance-data-manager.yml
+++ b/.github/workflows/publish-openidl-insurance-data-manager.yml
@@ -2,7 +2,7 @@ name: Publish openIDL insurance-data-manager
 on:
   push:
     branches:
-      - 'git-actions-helm'
+      - 'cognito-fabric-node14-helm'
     paths:
       - 'openidl-insurance-data-manager/**'
 
