--- a/.github/workflows/deploy-openidl-secrets-dev-carrier.yml
+++ b/.github/workflows/deploy-openidl-secrets-dev-carrier.yml
@@ -22,7 +22,7 @@ name: Deploy openIDL dev-carrier-secrets
 on:
   push:
     branches:
-      - 'git-actions-helm'
+      - 'cognito-fabric-node14-helm'
     paths:
       - 'openidl-k8s/global-values-secrets.yaml'
 
