--- a/.github/workflows/publish-openidl-data-call-mood-listener.yml
+++ b/.github/workflows/publish-openidl-data-call-mood-listener.yml
@@ -2,7 +2,7 @@ name: Publish openIDL data-call-mood-listener
 on:
   push:
     branches:
-      - 'git-actions-helm'
+      - 'cognito-fabric-node14-helm'
     paths:
       - 'openidl-data-call-mood-listener/**'
 
