--- a/.github/workflows/publish-openidl-ui-workspace.yml
+++ b/.github/workflows/publish-openidl-ui-workspace.yml
@@ -2,7 +2,7 @@ name: Publish openIDL ui and carrier-ui
 on:
   push:
     branches:
-      - 'git-actions-helm'
+      - 'cognito-fabric-node14-helm'
     paths:
       - 'openidl-ui-workspace/**'
 
