--- a/.github/workflows/publish-openidl-utilities.yml
+++ b/.github/workflows/publish-openidl-utilities.yml
@@ -2,7 +2,7 @@ name: Publish openIDL utilities
 on:
   push:
     branches:
-      - 'git-actions-helm'
+      - 'cognito-fabric-node14-helm'
     paths:
       - 'openidl-utilities/**'
 
