Update secret name to access_token from github_token

--- a/.github/workflows/publish-openidl-data-call-app.yml
+++ b/.github/workflows/publish-openidl-data-call-app.yml
@@ -9,7 +9,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: openidl-data-call-app
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
   NPM_TOKEN: $${{ secrets.ACCESS_TOKEN }}
 
 defaults:
@@ -34,7 +34,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.ACCESS_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
