utilize the automatic secrets.github_action

--- a/.github/workflows/publish-openidl-data-call-app.yml
+++ b/.github/workflows/publish-openidl-data-call-app.yml
@@ -9,7 +9,7 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: openidl-data-call-app
-  GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   NPM_TOKEN: $${{ secrets.ACCESS_TOKEN }}
 
 defaults:
@@ -34,7 +34,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.ACCESS_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -45,7 +45,7 @@ jobs:
       - name: Prepare .npmrc
         id: npmrc
         run: |
-          sed -i 's|${GITHUB_TOKEN}|${{ secrets.ACCESS_TOKEN }}|' ./.npmrc
+          sed -i 's|${GITHUB_TOKEN}|${{ secrets.GITHUB_TOKEN }}|' ./.npmrc
 
       - name: Get Current Date and Time
         id: datetime
