--- a/openidl-local-reference-implementation/config/config-local-carrier/insurance-data-manager-default-config.json
+++ b/openidl-local-reference-implementation/config/config-local-carrier/insurance-data-manager-default-config.json
@@ -8,5 +8,5 @@
         "6964",
         "1234"
     ],
-    "send_grid_apikey": "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"
+    "send_grid_apikey": "${SENDGRID_KEY}"
 }
