--- a/.github/workflows/publish-openidl-data-call-app.yml
+++ b/.github/workflows/publish-openidl-data-call-app.yml
@@ -7,7 +7,7 @@ on:
       - 'openidl-data-call-app/**'
 
 env:
-  REGISTRY: ghcr.io
+  REGISTRY: ghcr.io/${{ github.repository }}
   IMAGE_NAME: openidl-data-call-app
 
 defaults:
@@ -62,5 +62,5 @@ jobs:
           context: openidl-data-call-app
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            ${{ env.REGISTRY }}/openidl-org/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/openidl-org/${{ env.IMAGE_NAME }}:${{ github.run_number }}-${{ env.BRANCH }}-${{ env.COMMIT_ID }}-${{ env.BUILD_DATETIME }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}-${{ env.BRANCH }}-${{ env.COMMIT_ID }}-${{ env.BUILD_DATETIME }}
