--- a/.github/workflows/publish-openidl-insurance-data-manager.yml
+++ b/.github/workflows/publish-openidl-insurance-data-manager.yml
@@ -7,7 +7,7 @@ on:
       - 'openidl-insurance-data-manager/**'
 
 env:
-  REGISTRY: ghcr.io
+  REGISTRY: ghcr.io/${{ github.repository }}
   IMAGE_NAME: openidl-insurance-data-manager
 
 defaults:
@@ -61,7 +61,7 @@ jobs:
           context: openidl-insurance-data-manager
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            ${{ env.REGISTRY }}/openidl-org/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/openidl-org/${{ env.IMAGE_NAME }}:${{ github.run_number }}-${{ env.BRANCH }}-${{ env.COMMIT_ID }}-${{ env.BUILD_DATETIME }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}-${{ env.BRANCH }}-${{ env.COMMIT_ID }}-${{ env.BUILD_DATETIME }}
 
 
