--- a/.github/workflows/publish-openidl-ui-workspace.yml
+++ b/.github/workflows/publish-openidl-ui-workspace.yml
@@ -7,7 +7,7 @@ on:
       - 'openidl-ui-workspace/**'
 
 env:
-  REGISTRY: ghcr.io
+  REGISTRY: ghcr.io/${{ github.repository }}
   IMAGE_NAME: openidl
 
 defaults:
@@ -72,7 +72,7 @@ jobs:
           build-args: PROJECT=carrier
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            ${{ env.REGISTRY }}/openidl-org/${{ env.IMAGE_NAME }}-carrier-ui:latest
-            ${{ env.REGISTRY }}/openidl-org/${{ env.IMAGE_NAME }}-carrier-ui:${{ github.run_number }}-${{ env.BRANCH }}-${{ env.COMMIT_ID }}-${{ env.BUILD_DATETIME }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-carrier-ui:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-carrier-ui:${{ github.run_number }}-${{ env.BRANCH }}-${{ env.COMMIT_ID }}-${{ env.BUILD_DATETIME }}
 
 
