--- a/.github/workflows/publish-openidl-utilities.yml
+++ b/.github/workflows/publish-openidl-utilities.yml
@@ -7,7 +7,7 @@ on:
       - 'openidl-utilities/**'
 
 env:
-  REGISTRY: ghcr.io
+  REGISTRY: ghcr.io/${{ github.repository }}
   IMAGE_NAME: openidl-utilities
 
 defaults:
@@ -61,5 +61,5 @@ jobs:
           context: openidl-utilities
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
-            ${{ env.REGISTRY }}/openidl-org/${{ env.IMAGE_NAME }}:latest
-            ${{ env.REGISTRY }}/openidl-org/${{ env.IMAGE_NAME }}:${{ github.run_number }}-${{ env.BRANCH }}-${{ env.COMMIT_ID }}-${{ env.BUILD_DATETIME }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}-${{ env.BRANCH }}-${{ env.COMMIT_ID }}-${{ env.BUILD_DATETIME }}
