--- a/.github/workflows/deploy-openidl-app-dev-analytics.yml
+++ b/.github/workflows/deploy-openidl-app-dev-analytics.yml
@@ -45,6 +45,7 @@ jobs:
         role-external-id: ${{ secrets.eks_external_id }}
         role-duration-seconds: 3600 # session valid for 30 minutes
         role-session-name: git-actions 
+        role-skip-session-tagging: true
 
     - name: Checkout Code
       uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
