--- a/.github/workflows/deploy-openidl-secrets-dev-analytics.yml
+++ b/.github/workflows/deploy-openidl-secrets-dev-analytics.yml
@@ -50,6 +50,7 @@ jobs:
         role-external-id: ${{ secrets.eks_external_id }}
         role-duration-seconds: 3600 # session valid for 30 minutes
         role-session-name: git-actions 
+        role-skip-session-tagging: true
 
     - name: Update kube-config for eks cluster
       run: |
