updated file to test

--- a/.github/workflows/deploy-openidl-secrets-dev-aais.yml
+++ b/.github/workflows/deploy-openidl-secrets-dev-aais.yml
@@ -76,7 +76,7 @@ jobs:
         kubectl exec deploy-secrets -n openidl -- sh -c "export AWS_PROFILE=git-role; aws eks update-kubeconfig --region ${{ secrets.eks_sm_region }} --name ${{ secrets.eks_cluster_name }}"
         kubectl exec deploy-secrets -n openidl -- helm upgrade --install dev-aais-secrets ./openidl-k8s -f ./openidl-k8s/global-values-secrets.yaml -n openidl --set global.configpath=config-dev-aais
     
-#    - name: Dispose the pod
-#      if: ${{ always() }}
-#      run: |
-#        kubectl delete pod deploy-secrets -n openidl
+    - name: Dispose the pod
+      if: ${{ always() }}
+      run: |
+        kubectl delete pod deploy-secrets -n openidl
