--- a/openidl-k8s/global-values-secrets.yaml
+++ b/openidl-k8s/global-values-secrets.yaml
@@ -1,5 +1,5 @@
 global:
-  clusterurl: aaisdirect.com
+  clusterurl: aaisdem.com
   appsecret: apps-secret
   configpath: config-local-aais
   datacallapp:
