cleaning up the bootstrapping

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ openidl-ui-workspace/package-lock.json
 openidl-ui-workspace/projects/openidl-carrier-ui/server/config/local-appid-config.json
 openidl-ui-workspace/projects/openidl-ui/server/config/local-appid-config.json
 **/*for testing*.*
+openidl-local-reference-implementation/config/config.json
