--- a/openidl-k8s/global-values-dev-carrier.yaml
+++ b/openidl-k8s/global-values-dev-carrier.yaml
@@ -8,8 +8,8 @@ global:
     targetport: 8080
     servicename: data-call-app-service
     ingressenabled: false
-    ingresshostname: data-call-app-service.carrier.dev.internal.aaiscarrierdemo.com
-    publicingresshostname: data-call-app-service.carrier.dev.aaiscarrierdemo.com
+    ingresshostname: data-call-app-service.dev.carrier.internal.techiething.com
+    publicingresshostname: data-call-app-service.dev.carrier.techiething.com
     image:
       repository: ghcr.io/openidl-org/openidl-data-call-app
       pullPolicy: IfNotPresent
@@ -20,8 +20,8 @@ global:
     targetport: 8080
     servicename: utilities-service
     ingressenabled: false
-    ingresshostname: utilities-service.carrier.dev.internal.aaiscarrierdemo.com
-    publicingresshostname: utilities-service.carrier.dev.aaiscarrierdemo.com
+    ingresshostname: utilities-service.dev.carrier.internal.techiething.com
+    publicingresshostname: utilities-service.dev.carrier.techiething.com
     image:
       repository: ghcr.io/openidl-org/openidl-utilities
       pullPolicy: IfNotPresent
@@ -32,7 +32,7 @@ global:
     port: 8080
     targetport: 8080
     ingressenabled: false
-    ingresshostname: openidl.carrier.dev.aaiscarrierdemo.com
+    ingresshostname: openidl.dev.carrier.techiething.com
     image:
       repository: ghcr.io/openidl-org/openidl-carrier-ui
       pullPolicy: IfNotPresent
@@ -43,7 +43,7 @@ global:
     targetport: 8080
     servicename: insurance-data-manager-service
     ingressenabled: false
-    ingresshostname: insurance-data-manager-service.carrier.dev.aaiscarrierdemo.com
+    ingresshostname: insurance-data-manager-service.dev.carrier.techiething.com
     image:
       repository: ghcr.io/openidl-org/openidl-insurance-data-manager
       pullPolicy: IfNotPresent
@@ -90,7 +90,7 @@ global:
     port: 8080
     targetport: 8080
     ingressenabled: false
-    ingresshostname: openidl.carrier.dev.aaiscarrierdemo.com
+    ingresshostname: openidl.dev.carrier.techiething.com
     image:
       repository: ghcr.io/openidl-org/openidl-ui
       pullPolicy: IfNotPresent
