--- a/openidl-k8s/global-values-dev-trv.yaml
+++ b/openidl-k8s/global-values-dev-trv.yaml
@@ -1,5 +1,5 @@
 global:
-  clusterurl: aaistrvdemo.com
+  clusterurl: trvdemo.com
   appsecret: apps-secret
   configpath: config-local-trv
   datacallapp:
