updated gitactions pipeline secret variables

--- a/.github/workflows/publish-openidl-transactional-data-event-listener.yml
+++ b/.github/workflows/publish-openidl-transactional-data-event-listener.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - 'cognito-fabric-node14-helm'
+      - 'develop'
     paths:
       - 'openidl-transactional-data-event-listener/**'
 
