--- a/.github/workflows/deploy-openidl-secrets-dev-aais.yml
+++ b/.github/workflows/deploy-openidl-secrets-dev-aais.yml
@@ -5,15 +5,15 @@
 # IAM user (access key and secret key) and IAM role setup to gain access to EKS cluster 
 # AWS Region of EKS cluster and Secret Manager configured (note: Both will be same region)
 # EKS Cluster name 
-# Name of the Secret in AWS secret maanger setup 
+# Name of the Secret in AWS secret manager setup
 # Setup the following secrets in github as environment secrets under environment named "dev-aais"
-# 1. eks_admin_access_key
-# 2. eks_admin_secret_key 
-# 3. eks_admin_role 
-# 4. eks_external_id 
-# 4. eks_sm_region (The AWS region of EKS and Secret Manager)
-# 5. eks_cluster_name 
-# 6. vault_secret_name (name of the secret setup in vault to retrieve credentials) 
+#1. gitactions_user_access_key
+#2. gitactions_user_secret_key
+#3. gitactions_eksadm_role
+#4. gitactions_external_id
+#5. aws_region
+#6. app_cluster_name
+#7. vault_secret_name (name of the secret setup in vault to retrieve credentials)
 
 # Authors: Rajesh Sanjeevi & Sandeep Pulluru
 # Version: 1.0 
@@ -23,6 +23,7 @@ on:
   push:
     branches:
       - 'cognito-fabric-node14-helm'
+      - 'develop'
     paths:
       - 'openidl-k8s/global-values-secrets.yaml'
 
@@ -43,18 +44,18 @@ jobs:
     - name: Configure AWS CLI with credentials
       uses: aws-actions/configure-aws-credentials@230d25f14e841bc8e06b5f4ff89ccd6989fc1d71
       with:
-        aws-access-key-id: ${{ secrets.eks_admin_access_key }}
-        aws-secret-access-key: ${{ secrets.eks_admin_secret_key }}
-        aws-region: ${{ secrets.eks_sm_region }}
-        role-to-assume: ${{ secrets.eks_admin_role }}
-        role-external-id: ${{ secrets.eks_external_id }}
+        aws-access-key-id: ${{ secrets.gitactions_user_access_key }}
+        aws-secret-access-key: ${{ secrets.gitactions_user_secret_key }}
+        aws-region: ${{ secrets.aws_region }}
+        role-to-assume: ${{ secrets.gitactions_eksadm_role }}
+        role-external-id: ${{ secrets.gitactions_external_id }}
         role-duration-seconds: 3600 # session valid for 30 minutes
         role-session-name: git-actions 
         role-skip-session-tagging: true
 
     - name: Update kube-config for eks cluster
       run: |
-       aws eks update-kubeconfig --region ${{ secrets.eks_sm_region }} --name ${{ secrets.eks_cluster_name }}
+       aws eks update-kubeconfig --region ${{ secrets.aws_region }} --name ${{ secrets.app_cluster_name }}
        
     - name: Prepare a pod
       run: |
@@ -65,15 +66,15 @@ jobs:
         kubectl cp openidl-test-network/vault/ openidl/deploy-secrets:/
         kubectl exec deploy-secrets -n openidl -- sh -c "chmod +x vault/*.sh"
         kubectl exec deploy-secrets -n openidl -- sh -c "mkdir openidl-k8s/charts/openidl-secrets/config-dev-aais"
-        kubectl exec deploy-secrets -n openidl -- sh -c "./vault/deploy-utilities.sh -a ${{ secrets.eks_admin_access_key }} -s ${{ secrets.eks_admin_secret_key }} -r ${{ secrets.eks_sm_region }} -o ${{ secrets.eks_admin_role }}"
+        kubectl exec deploy-secrets -n openidl -- sh -c "./vault/deploy-utilities.sh -a ${{ secrets.gitactions_user_access_key }} -s ${{ secrets.gitactions_user_secret_key }} -r ${{ secrets.aws_region }} -o ${{ secrets.gitactions_eksadm_role }}"
     
     - name: Retrive secrets from vault
       run: |
-        kubectl exec deploy-secrets -n openidl -- sh -c "./vault/pull-aws-vault-config.sh -s ${{ secrets.vault_secret_name }} -r ${{ secrets.eks_sm_region }} -a config-aais -c openidl-k8s/charts/openidl-secrets/config-dev-aais"
+        kubectl exec deploy-secrets -n openidl -- sh -c "./vault/pull-aws-vault-config.sh -s ${{ secrets.vault_secret_name }} -r ${{ secrets.aws_region }} -a config-aais -c openidl-k8s/charts/openidl-secrets/config-dev-aais"
     
     - name: Deploy secrets
       run: |
-        kubectl exec deploy-secrets -n openidl -- sh -c "export AWS_PROFILE=git-role; aws eks update-kubeconfig --region ${{ secrets.eks_sm_region }} --name ${{ secrets.eks_cluster_name }}"
+        kubectl exec deploy-secrets -n openidl -- sh -c "export AWS_PROFILE=git-role; aws eks update-kubeconfig --region ${{ secrets.aws_region }} --name ${{ secrets.app_cluster_name }}"
         kubectl exec deploy-secrets -n openidl -- helm upgrade --install dev-aais-secrets ./openidl-k8s -f ./openidl-k8s/global-values-secrets.yaml -n openidl --set global.configpath=config-dev-aais
     
     - name: Dispose the pod
