--- a/.github/workflows/publish-openidl-data-call-processor.yml
+++ b/.github/workflows/publish-openidl-data-call-processor.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - 'cognito-fabric-node14-helm'
+      - 'develop'
     paths:
       - 'openidl-data-call-processor/**'
 
