--- a/.github/workflows/publish-openidl-insurance-data-manager.yml
+++ b/.github/workflows/publish-openidl-insurance-data-manager.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - 'cognito-fabric-node14-helm'
+      - 'develop'
     paths:
       - 'openidl-insurance-data-manager/**'
 
