--- a/.github/workflows/deploy-openidl-secrets-dev-carrier.yml
+++ b/.github/workflows/deploy-openidl-secrets-dev-carrier.yml
@@ -66,16 +66,22 @@ jobs:
         kubectl cp openidl-test-network/vault/ openidl/deploy-secrets:/
         kubectl exec deploy-secrets -n openidl -- sh -c "chmod +x vault/*.sh"
         kubectl exec deploy-secrets -n openidl -- sh -c "mkdir openidl-k8s/charts/openidl-secrets/config-dev-carrier"
-        kubectl exec deploy-secrets -n openidl -- sh -c "./vault/deploy-utilities.sh -a ${{ secrets.gitactions_user_access_key }} -s ${{ secrets.gitactions_user_secret_key }} -r ${{ secrets.aws_region }} -o ${{ secrets.gitactions_eksadm_role }}"
+        kubectl exec deploy-secrets -n openidl -- sh -c "./vault/deploy-utilities.sh \
+          -a ${{ secrets.gitactions_user_access_key }} -s ${{ secrets.gitactions_user_secret_key }} \
+          -r ${{ secrets.aws_region }} -o ${{ secrets.gitactions_eksadm_role }}"
     
     - name: Retrive secrets from vault
       run: |
-        kubectl exec deploy-secrets -n openidl -- sh -c "./vault/pull-aws-vault-config.sh -s ${{ secrets.vault_secret_name }} -r ${{ secrets.aws_region }} -a config-carrier -c openidl-k8s/charts/openidl-secrets/config-dev-carrier"
+        kubectl exec deploy-secrets -n openidl -- sh -c "./vault/pull-aws-vault-config.sh \
+          -s ${{ secrets.vault_secret_name }} -r ${{ secrets.aws_region }} -a config-carrier \
+          -c openidl-k8s/charts/openidl-secrets/config-dev-carrier"
     
     - name: Deploy secrets
       run: |
-        kubectl exec deploy-secrets -n openidl -- sh -c "export AWS_PROFILE=git-role; aws eks update-kubeconfig --region ${{ secrets.aws_region }} --name ${{ secrets.app_cluster_name }}"
-        kubectl exec deploy-secrets -n openidl -- helm upgrade --install dev-carrier-secrets ./openidl-k8s -f ./openidl-k8s/global-values-secrets.yaml -n openidl --set global.configpath=config-dev-carrier
+        kubectl exec deploy-secrets -n openidl -- sh -c "export AWS_PROFILE=git-role; aws eks update-kubeconfig \
+          --region ${{ secrets.aws_region }} --name ${{ secrets.app_cluster_name }}"
+        kubectl exec deploy-secrets -n openidl -- helm upgrade --install dev-carrier-secrets ./openidl-k8s \
+          -f ./openidl-k8s/global-values-secrets.yaml -n openidl --set global.configpath=config-dev-carrier
     
     - name: Dispose the pod
       if: ${{ always() }}
