--- a/.github/workflows/deploy-openidl-app-dev-analytics.yml
+++ b/.github/workflows/deploy-openidl-app-dev-analytics.yml
@@ -61,4 +61,6 @@ jobs:
         aws eks update-kubeconfig --region ${{ secrets.aws_region }} --name ${{ secrets.app_cluster_name }}
     - name: Deploy openIDL app using helm
       run: |
-        helm upgrade --install dev-analytics ./openidl-k8s -f ./openidl-k8s/global-values-dev-analytics.yaml -n openidl --set global.datacallapp.ingressenabled=true --set global.utilities.ingressenabled=true  --set global.ui.ingressenabled=true --set global.secrets.install=false
+        helm upgrade --install dev-analytics ./openidl-k8s -f ./openidl-k8s/global-values-dev-analytics.yaml \
+          -n openidl --set global.datacallapp.ingressenabled=true --set global.utilities.ingressenabled=true \
+          --set global.ui.ingressenabled=true --set global.secrets.install=false
