--- a/openidl-k8s/.gitignore
+++ b/openidl-k8s/.gitignore
@@ -4,3 +4,6 @@ charts/openidl-secrets/config-local-analytics/**
 charts/openidl-secrets/config-dev-aais/**
 charts/openidl-secrets/config-dev-carrier/**
 charts/openidl-secrets/config-dev-analytics/**
+charts/openidl-secrets/config-itpc-aais/**
+charts/openidl-secrets/config-itpc-carrier/**
+charts/openidl-secrets/config-itpc-analytics/**
