--- a/.github/workflows/deploy-openidl-app-dev-analytics.yml
+++ b/.github/workflows/deploy-openidl-app-dev-analytics.yml
@@ -19,10 +19,11 @@ name: Deploy openIDL dev-analytics
 on:
   push:
     branches:
-      - 'cognito-fabric-node14-helm'
       - 'develop'
     paths:
       - 'openidl-k8s/global-values-dev-analytics.yaml'
+
+  workflow_dispatch:
 
 defaults:
   run:
@@ -61,6 +62,6 @@ jobs:
         aws eks update-kubeconfig --region ${{ secrets.aws_region }} --name ${{ secrets.app_cluster_name }}
     - name: Deploy openIDL app using helm
       run: |
-        helm upgrade --install dev-analytics ./openidl-k8s -f ./openidl-k8s/global-values-dev-analytics.yaml \
+        helm upgrade --recreate-pods --install dev-analytics ./openidl-k8s -f ./openidl-k8s/global-values-dev-analytics.yaml \
           -n openidl --set global.datacallapp.ingressenabled=true --set global.utilities.ingressenabled=true \
           --set global.ui.ingressenabled=true --set global.secrets.install=false
