--- a/.github/workflows/deploy-openidl-app-dev-carrier.yml
+++ b/.github/workflows/deploy-openidl-app-dev-carrier.yml
@@ -19,10 +19,11 @@ name: Deploy openIDL dev-carrier
 on:
   push:
     branches:
-      - 'cognito-fabric-node14-helm'
       - 'develop'
     paths:
-      - 'openidl-k8s/global-values-dev-trv.yaml'
+      - 'openidl-k8s/global-values-dev-carrier.yaml'
+
+  workflow_dispatch:
 
 defaults:
   run:
@@ -61,7 +62,7 @@ jobs:
         aws eks update-kubeconfig --region ${{ secrets.aws_region }} --name ${{ secrets.app_cluster_name }}
     - name: Deploy openIDL app using helm
       run: |
-       helm upgrade --install dev-carrier ./openidl-k8s -f ./openidl-k8s/global-values-dev-trv.yaml \
+       helm upgrade --recreate-pods --install dev-carrier ./openidl-k8s -f ./openidl-k8s/global-values-dev-carrier.yaml \
           -n openidl --set global.datacallapp.ingressenabled=true --set global.utilities.ingressenabled=true \
           --set global.carrierui.ingressenabled=true --set global.insurancedatamanager.ingressenabled=true \
           --set global.secrets.install=false
