--- a/.github/workflows/publish-openidl-data-call-app.yml
+++ b/.github/workflows/publish-openidl-data-call-app.yml
@@ -2,10 +2,11 @@ name: Publish openIDL data-call-app
 on:
   push:
     branches:
-      - 'cognito-fabric-node14-helm'
       - 'develop'
     paths:
       - 'openidl-data-call-app/**'
+
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io/${{ github.repository }}
