--- a/.github/workflows/publish-openidl-transactional-data-event-listener.yml
+++ b/.github/workflows/publish-openidl-transactional-data-event-listener.yml
@@ -2,10 +2,11 @@ name: Publish openIDL transactional-data-event-listener
 on:
   push:
     branches:
-      - 'cognito-fabric-node14-helm'
       - 'develop'
     paths:
       - 'openidl-transactional-data-event-listener/**'
+
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io/${{ github.repository }}
