--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ openidl-ui-workspace/projects/openidl-carrier-ui/server/config/local-appid-confi
 openidl-ui-workspace/projects/openidl-ui/server/config/local-appid-config.json
 **/*for testing*.*
 openidl-local-reference-implementation/config/config.json
+**/npmls.txt
