--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ openidl-ui-workspace/projects/openidl-ui/server/config/local-appid-config.json
 **/*for testing*.*
 openidl-local-reference-implementation/config/config.json
 **/npmls.txt
+openidl-local-reference-implementation/config/config.json
