remove dynamic name

--- a/.github/workflows/deploy-openidl-secrets.yml
+++ b/.github/workflows/deploy-openidl-secrets.yml
@@ -36,7 +36,7 @@ defaults:
     shell: bash
 
 jobs:
-  secrets-${{ github.event.inputs.env }}-${{ github.event.inputs.org_name }}:
+  secrets-deploy:
     environment: ${{ github.event.inputs.env }}-${{ github.event.inputs.org_name }}
     name: Deploy openIDL secrets on ${{ github.event.inputs.env }}-${{ github.event.inputs.org_name }}
     runs-on: ubuntu-latest
