remove temp fix

--- a/.github/workflows/deploy-openidl-secrets.yml
+++ b/.github/workflows/deploy-openidl-secrets.yml
@@ -90,7 +90,7 @@ jobs:
           -f ./openidl-k8s/global-values-secrets.yaml -n openidl \
         --set global.configpath=config-${{ github.event.inputs.env }}-${{ github.event.inputs.org_name }}
     
-#    - name: Dispose the pod
-#      if: ${{ always() }}
-#      run: |
-#        kubectl delete pod deploy-secrets -n openidl
+    - name: Dispose the pod
+      if: ${{ always() }}
+      run: |
+        kubectl delete pod deploy-secrets -n openidl
