openidl-config management

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,7 @@ openidl-ui-workspace/projects/openidl-ui/server/config/local-appid-config.json
 openidl-local-reference-implementation/config/config.json
 **/npmls.txt
 openidl-local-reference-implementation/config/config.json
+openidl-config/aais-dev-config-secrets.json
+openidl-config/config/*
+!openidl-config/config/placeholder.txt
+openidl-config/ubuntu.yml
