--- a/openidl-k8s/global-values-dev-aais.yaml
+++ b/openidl-k8s/global-values-dev-aais.yaml
@@ -8,8 +8,8 @@ global:
         targetport: 8080
         servicename: data-call-app-service
         ingressenabled: false
-        ingresshostname: data-call-app-service.dev.aais.internal.openidl.aaisdirect.com
-        publicingresshostname: data-call-app-service.dev.aais.openidl.aaisdirect.com
+        ingresshostname: data-call-app-service.dev.internal.openidl.aaisdirect.com
+        publicingresshostname: data-call-app-service.dev.openidl.aaisdirect.com
         image:
             repository: ghcr.io/openidl-org/openidl-data-call-app
             pullPolicy: IfNotPresent
@@ -43,7 +43,7 @@ global:
         targetport: 8080
         servicename: insurance-data-manager-service
         ingressenabled: false
-        ingresshostname: insurance-data-manager-service.dev.aais.openidl.aaisdirect.com
+        ingresshostname: insurance-data-manager-service.dev.openidl.aaisdirect.com
         image:
             repository: ghcr.io/openidl-org/openidl-insurance-data-manager
             pullPolicy: IfNotPresent
