--- a/openidl-config/Makefile
+++ b/openidl-config/Makefile
@@ -1,10 +1,25 @@
 copy_config_files:
 	./copy-config-files.sh
 
-apply_secrets:
-	node apply-secrets.js
+apply_aais_secrets:
+	node apply-secrets.js aais
 	
-copy_secrets:
+apply_analytics_secrets:
+	node apply-secrets.js analytics
+	
+apply_carrier_secrets:
+	node apply-secrets.js carrier
+	
+copy_aais_secrets:
 	./copy-config-files.sh
-	node apply-secrets.js
+	node apply-secrets.js aais
+
+copy_analytics_secrets:
+	./copy-config-files.sh
+	node apply-secrets.js analytics
+
+copy_carrier_secrets:
+	./copy-config-files.sh
+	node apply-secrets.js carrier
+
 
