--- a/openidl-k8s/global-values-dev-analytics.yaml
+++ b/openidl-k8s/global-values-dev-analytics.yaml
@@ -8,7 +8,7 @@ global:
         targetport: 8080
         servicename: data-call-app-service
         ingressenabled: false
-        ingresshostname: data-call-app-service.dev.analytics.internal.openidl.aaisdirect.com.com
+        ingresshostname: data-call-app-service.dev.analytics.internal.aaisdirect.com
         publicingresshostname: data-call-app-service.dev.analytics.openidl.aaisdirect.com
         image:
             repository: ghcr.io/openidl-org/openidl-data-call-app
@@ -20,7 +20,7 @@ global:
         targetport: 8080
         servicename: utilities-service
         ingressenabled: false
-        ingresshostname: utilities-service.dev.analytics.internal.openidl.aaisdirect.com
+        ingresshostname: utilities-service.dev.analytics.internal.aaisdirect.com
         publicingresshostname: utilities-service.dev.analytics.openidl.aaisdirect.com
         image:
             repository: ghcr.io/openidl-org/openidl-utilities
