--- a/openidl-data-utilities/config/config-template.json
+++ b/openidl-data-utilities/config/config-template.json
@@ -14,6 +14,7 @@
             "url": "utilities-service.dev.carrier.<subdomain>.<domain>.com"
         },
         "mongo": {
+            "port": "28017",
             "user": "<mongo user>",
             "token": "<mongo user token>"
         }
