--- a/openidl-data-utilities/Makefile
+++ b/openidl-data-utilities/Makefile
@@ -1,8 +1,10 @@
+DRY_RUN = false
+
 load_insurance_data:
-	node load-insurance-data.js
+	node load-insurance-data.js  $(DRY_RUN)
 
 run_extraction_pattern:
-	node run-extraction-pattern.js
+	node run-extraction-pattern.js $(DC_NAME)
 
 generate_csv:
 	node generate-csv.js
