--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ openidl-data-utilities/config/config.json
 openidl-data-utilities/config/logins.json
 openidl-data-utilities/output/output.csv
 openidl-config/openidl-configurations/config/carrier-config.json
+openidl-config/vault/*
