--- a/openidl-ui-workspace/package.json
+++ b/openidl-ui-workspace/package.json
@@ -23,10 +23,12 @@
 		"@angular/core": "~12.1.2",
 		"@angular/forms": "~12.1.2",
 		"@angular/material": "~12.1.2",
+		"@angular/material-moment-adapter": "^12.2.13",
 		"@angular/platform-browser": "~12.1.2",
 		"@angular/platform-browser-dynamic": "~12.1.2",
 		"@angular/router": "~12.1.2",
-		"@openidl-org/openidl-common-lib": "^0.5.9",
+		"@openidl-org/openidl-common-lib": "^0.5.8",
+		"angular-moment": "^1.3.0",
 		"config": "^3.3.6",
 		"cookie-parser": "^1.4.5",
 		"cors": "^2.8.5",
