--- a/lambdas/ReportProcessorLambda/package.json
+++ b/lambdas/ReportProcessorLambda/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reportprocessor",
   "version": "1.0.0",
-  "main": "report.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,7 @@
     "csvjson": "^5.1.0",
     "csvtojson": "^2.0.10",
     "loglevel": "^1.8.0",
+    "config": "^2.0.1",
     "mongodb": "^4.9.0"
   }
 }
