--- a/lambdas/ReportProcessorLambda/package.json
+++ b/lambdas/ReportProcessorLambda/package.json
@@ -10,10 +10,10 @@
   "description": "",
   "dependencies": {
     "aws-sdk": "^2.1199.0",
+    "config": "^2.0.1",
     "csvjson": "^5.1.0",
     "csvtojson": "^2.0.10",
     "loglevel": "^1.8.0",
-    "config": "^2.0.1",
-    "mongodb": "^4.9.0"
+    "node-fetch": "^3.2.10"
   }
 }
