--- a/lambdas/ReportProcessorLambda/package.json
+++ b/lambdas/ReportProcessorLambda/package.json
@@ -14,6 +14,6 @@
     "csvjson": "^5.1.0",
     "csvtojson": "^2.0.10",
     "loglevel": "^1.8.0",
-    "node-fetch": "^3.2.10"
+    "node-fetch": "2.x"
   }
 }
