Add npmrc to publish job
Signed-off-by: Surya Lanka <surya.lanka@itpeoplecorp.com>

--- a/.github/workflows/publish-openidl-common-lib-npm.yml
+++ b/.github/workflows/publish-openidl-common-lib-npm.yml
@@ -23,6 +23,7 @@ jobs:
           echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
           echo "@openidl-org:registry=https://npm.pkg.github.com" >> .npmrc
           echo "always-auth=true" >> .npmrc
+          cat .npmrc
       - name: Setup Node
         uses: actions/setup-node@v2
         with:
