--- a/.github/workflows/publish-openidl-common-lib-npm.yml
+++ b/.github/workflows/publish-openidl-common-lib-npm.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Create .npmrc
         run: |
           cd openidl-common-lib/
-          echo "//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}" > .npmrc
+          echo "//npm.pkg.github.com/:_authToken=\${NODE_AUTH_TOKEN}" > .npmrc
           echo "@openidl-org:registry=https://npm.pkg.github.com" >> .npmrc
           echo "always-auth=true" >> .npmrc
           cat .npmrc
