Add paths for changes in common-lib publish job
Signed-off-by: suryalanka-cy <41959804+suryalanka-cy@users.noreply.github.com>

--- a/.github/workflows/publish-openidl-common-lib-npm.yml
+++ b/.github/workflows/publish-openidl-common-lib-npm.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - openidl-nd-poc-main       
       - develop
+    paths:
+      - 'openidl-common-lib/**'
+  
   workflow_dispatch:
 
 jobs:
