--- a/.github/workflows/publish-openidl-common-lib-npm.yml
+++ b/.github/workflows/publish-openidl-common-lib-npm.yml
@@ -4,6 +4,7 @@ on:
     branches:
       - openidl-nd-poc-main       
       - develop
+      - cognito_log
     paths:
       - 'openidl-common-lib/**'
   
