--- a/openidl-common-lib/package.json
+++ b/openidl-common-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openidl-org/openidl-common-lib",
-  "version": "0.5.19",
+  "version": "0.5.17",
   "private": false,
   "main": "index.js",
   "publishConfig": {
@@ -31,7 +31,7 @@
     "ibmcloud-appid": "^6.0.0",
     "log4js": "^4.3.2",
     "mongodb": "^3.6.10",
-    "node-vault":"^0.9.22",
+    "node-vault": "^0.9.22",
     "passport": "^0.4.0",
     "passport-cognito": "^0.2.2",
     "request-promise": "^4.2.2",
@@ -47,16 +47,10 @@
     "eslint-plugin-import": "^2.13.0",
     "mocha": "^8.4.0",
     "nodemon": "^2.0.12",
-    "nyc": "15.0.0",
-    "husky": "^4.3.8"
+    "nyc": "15.0.0"
   },
   "resolutions": {
     "fabric-client/**/jsrsasign": "10.2.0",
     "fabric-ca-client/**/jsrsasign": "10.2.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm version --force --no-git-tag-version patch && git add package.json package-lock.json"
-    }
   }
 }
