--- a/.github/workflows/publish-openidl-common-lib-npm.yml
+++ b/.github/workflows/publish-openidl-common-lib-npm.yml
@@ -30,18 +30,18 @@ jobs:
       - name: Publish package on NPM
         run: |
           cd openidl-common-lib/
-          VERSION=$(npm version patch)
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          # VERSION=$(npm version patch)
+          # echo "VERSION=$VERSION" >> $GITHUB_ENV
           npm publish --registry=https://npm.pkg.github.com/
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       # push the version changes to GitHub
-      - run: |
-          git config --global user.name "GitHub CD bot"
-          git config --global user.email "github-cd-bot@aaisonline.com"
-          git commit -a -s -m "Publish New Version $version of openidl-common-lib"
-          git push
-        env:
-          # The secret is passed automatically. Nothing to configure.
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          version: ${{ env.VERSION }}
+      # - run: |
+      #     git config --global user.name "GitHub CD bot"
+      #     git config --global user.email "github-cd-bot@aaisonline.com"
+      #     git commit -a -s -m "Publish New Version $version of openidl-common-lib"
+      #     git push
+      #   env:
+      #     # The secret is passed automatically. Nothing to configure.
+      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+      #     version: ${{ env.VERSION }}
