fix python version
Signed-off-by: Surya Lanka <surya.lanka@itpeoplecorp.com>
Signed-off-by: Lyubomir Bandrov <lyubomir.bandrov@senofi.ca>

--- a/openidl-insurance-data-manager/Dockerfile
+++ b/openidl-insurance-data-manager/Dockerfile
@@ -4,7 +4,7 @@ RUN apk update && apk upgrade && \
     apk add --no-cache \
     bash \
     git \
-    python \
+    python3 \
     make \
     g++
 
